2009-01-25 Maximilien Cuony
    * 0.7.2 packed, and uploaded to the server !
    * Version 0.7.2 fix a problem with mail send in plain text (< and > are converted)
    * 0.7.1 packed, and uploaded to the server !
    * Danish added

2009-01-24 Maximilien Cuony
    * FS#214
    * New comment
    * FS#213
    * Fix a problem with firegpg message after sending a mail
    * Fix a problem when opening link in new windows widhout sending a mail
    * FS#183
    * FS#200
    * FS#186
    * FS#210

2009-01-22 Maximilien Cuony
    * FS#208
    * FS#206
    * FS#207

2009-01-21 Maximilien Cuony
    * FS#201
    * FS#202
    * FS#198
    * FS#194
    * FS#193
    * FS#188
    * FS#197
    * FS#199
    * FS#22
    * FS#195

2009-01-19 Maximilien Cuony
    * 0.7 packed, and uploaded to the server !
    * Adding ja, cs, fa

2009-01-18 Maximilien Cuony
    * Openpgp/mime support is... done FS#80

2009-01-17 Maximilien Cuony
    * Autosave should be disabled again FS#108
    * Sending mail by smtp done !

2009-01-15 Maximilien Cuony
    * Inline sign/crypt done
    * Fix bug with previous/next button

2009-01-15 Maximilien Cuony
    * Trying to fix FS#176 {fixed}
    * FS#177 - Improve gmail interface
    * fix problem with binary files attached in gmail

2009-01-14 Maximilien Cuony
    * Better html check
    * Decrypt mime content
    * Better signs checks
    * Fixed a problem with sign mail encrypted text (too information about user)
    * Big mails

2009-01-10 Maximilien Cuony
    * Base of using openpgp/mine mails
    * Instantaneous check for cGmail2
    * Finished checking sign in openpgp/mime and inline (problem with enigmail/iso wating on enigmail devs)
    * New decryption system working !

2009-01-07 Maximilien Cuony
    * Adding {$FXFolder} keyword for gnupg path and gnupg commands (for Fx portable)
    * FS#169
    * FS#154
    * FS#176
    * FS#7 (toolbar button removed)

2009-01-06 Maximilien Cuony
    * Translate.getfiregpg.org working