@@ -56,7 +56,7 @@ const FIREGPG_VERSION_A = '072';
 
 /* Constant: FIREGPG_STATUS
   The status of the FireGPG's code. Can be _DEVEL_ or _RELASE_. Use _RELASE_ only for.. relases ;). */
-const FIREGPG_STATUS = 'RELASE';
+const FIREGPG_STATUS = 'DEVEL';
 
 /* Constant: FIREGPG_SVN
   The current subversion's revision number, for this file ! */
@@ -798,7 +798,7 @@ function testIfSomethingsIsNew() {
 
     } else {
 
-        //DESACTIVED FOR ADDON.MOZILLA.ORG/*
+        //DESACTIVED FOR ADDON.MOZILLA.ORG        /*
 
 
 
